common_scriptsdir = @gfarm_root@/share/gfarm/systest/common_scripts
dist_common_scripts_DATA = calc_checksum \
	check_files \
	check_files_each_mntpnts \
	exec_on_multiple_clients \
	gfwhere_check \
	log_view \
	make_files \
	make_files_each_mntpnts \
	make_files_single \
	mkdir_n \
	mount_n \
	read_files \
	remove_files \
	remove_files_each_mntpnts \
	rmdir_n \
	umount_n
