common_scriptsdir = $(datadir)/gfarm/systest/common_scripts/gfarm2fs
dist_common_scripts_DATA = \
	calc_checksum \
	check_files \
	check_files_each_mntpnts \
	check_gfsd_connected \
	check_metadata_filesize \
	check_user_group \
	exec_on_multiple_clients \
	gfwhere_check \
	log_view \
	make_files \
	make_files_each_mntpnts \
	make_files_single \
	mkdir_n \
	mount_n \
	remove_files \
	remove_files_each_mntpnts \
	rmdir_n \
	test_read_files_common \
	test_write_files_common \
	test_write_files_each_mntpnts_common \
	umount_n \
	wait_for_gfsd_connect \
	wait_for_gfsd_disconnect
