parametersdir = $(datadir)/gfarm/systest/parameters
dist_parameters_DATA = read_files_1c_100m_1000f_100M \
	read_files_1c_100m_1000f_1G \
	read_files_1c_100m_1000f_1M \
	read_files_1c_1m_1000f_100M \
	read_files_1c_1m_1000f_1G \
	read_files_1c_1m_1000f_1M \
	read_files_4c_100m_1000f_100M \
	read_files_4c_100m_1000f_1G \
	read_files_4c_100m_1000f_1M \
	read_files_4c_100m_1f_1G \
	read_files_4c_250m_1000f_100M \
	read_files_4c_250m_1000f_1G \
	read_files_4c_250m_1000f_1M \
	read_files_4c_250m_1f_1G \
	write_files_1c_100m_1000f_100M \
	write_files_1c_100m_1000f_1G \
	write_files_1c_100m_1000f_1M \
	write_files_1c_1m_1000f_100M \
	write_files_1c_1m_1000f_1G \
	write_files_1c_1m_1000f_1M \
	write_files_4c_100m_1000f_100M \
	write_files_4c_100m_1000f_1G \
	write_files_4c_100m_1000f_1M \
	write_files_4c_100m_1f_1G \
	write_files_4c_250m_1000f_100M \
	write_files_4c_250m_1000f_1G \
	write_files_4c_250m_1000f_1M \
	write_files_4c_250m_1f_1G \
	write_files_each_mntpnts_4c_250m_1000f_100M \
	write_files_each_mntpnts_4c_250m_1000f_1G \
	write_files_each_mntpnts_4c_250m_1000f_1M
