gfservicedir = $(datadir)/gfarm/gfservice
dist_gfservice_DATA = check_files \
	check_files_n_each_mntpnts \
	log_view \
	make_file \
	make_files \
	make_files_n \
	make_files_n_each_mntpnts \
	mkdir_n \
	read_file \
	read_files \
	read_files_n \
	remove_files \
	remove_files_each_mntpnts \
	rmdir_n \
	exec_ssh \
	spool_file_exists \
	spool_file_checksum \
	ifup \
	ifdown \
	export_file \
	replicate_file \
	append_file
