gfservicedir = $(datadir)/gfarm/gfservice/systest/gfarm2fs
dist_gfservice_DATA = \
	append_file \
	check_files \
	check_files_n_each_mntpnts \
	exec_ssh \
	export_file \
	ifdown \
	ifup \
	log_view \
	make_file \
	make_files \
	make_files_n \
	make_files_n_each_mntpnts \
	mkdir_n \
	read_file \
	read_files \
	read_files_n \
	remove_files \
	remove_files_each_mntpnts \
	replicate_file \
	rmdir_n \
	spool_file_checksum \
	spool_file_exists
