testcasesdir = $(datadir)/gfarm/systest/testcases
dist_testcases_DATA = read_files \
	write_files \
	write_files_each_mntpnts \
	make_file \
	make_dir \
	copy_file_local_to_gfarm \
	copy_file_gfarm_to_gfarm \
	copy_file_gfarm_to_local \
	copy_dir_local_to_gfarm \
	copy_dir_gfarm_to_gfarm \
	copy_dir_gfarm_to_local
