testcasesdir = $(datadir)/gfarm/systest/testcases
dist_testcases_DATA = read_files \
	write_files \
	write_files_each_mntpnts \
	make_file \
	make_dir \
	copy_file_local_to_gfarm \
	copy_file_gfarm_to_gfarm \
	copy_file_gfarm_to_local \
	copy_dir_local_to_gfarm \
	copy_dir_gfarm_to_gfarm \
	copy_dir_gfarm_to_local \
	gfmd_ifdown_in_write \
	gfmd_ifdown_in_read \
	operation_in_gfmd_ifdown \
	pgsql_down_in_write \
	pgsql_down_in_read \
	operation_in_pgsql_down \
	client_ifdown_in_write \
	client_ifdown_in_read \
	operation_in_client_ifdown \
	gfsd_ifdown_in_write \
	gfsd_ifdown_in_read \
	gfsd_ifdown_in_rep \
	operation_in_gfsd_ifdown \
	append_in_gfsd_ifdown \
	delete_in_gfsd_ifdown \
	rename_in_gfsd_ifdown \
	copy_in_gfsd_ifdown \
	append_immediately_in_gfsd_ifdown \
	two_gfsd_ifdown_in_write \
	two_gfsd_ifdown_in_read \
	two_gfsd_ifdown_in_rep \
	operation_in_two_gfsd_ifdown \
	append_in_two_gfsd_ifdown \
	delete_in_two_gfsd_ifdown \
	rename_in_two_gfsd_ifdown \
	copy_in_two_gfsd_ifdown \
	gfmd_failover_in_write \
	gfmd_failover_in_read \
	write_in_gfmd_failover \
	read_in_gfmd_failover \
	useradd_in_gfmd_failover \
	userlist_in_gfmd_failover \
	userdel_in_gfmd_failover \
	start_gfsd_in_gfmd_failover \
	mount_in_gfmd_failover \
	rep_in_gfmd_failover \
	operation_after_gfmd_failover \
	continuous_operation
